syntax = "proto3";

option csharp_namespace = "Tbc.Protos";

package AiAdvisor;

service AiAdvisor {
  rpc GetFinancialAdvice (request) returns (FinancialAdvice);
}

message request {
  int32 balance = 1;
  repeated Transaction transactions = 2;
  repeated Goal goals = 3;
}

message Transaction {
  float amount = 1;
  string category = 2;
}

message Goal {
  string category = 1;
  float amount_saved = 2;
  float total = 3;
}


